# session

./: .gitignore  AGENTS.md  CMakeLists.txt  CODEOWNERS  README.md  imgui.ini
.ai/: README.md  config.json
.ai/evidence/conversations/: 2025-12-15-ai-memory-design.md  2025-12-16-codex-cli-usage.md
.ai/evidence/runs/: README.md  RUN-2025-12-16-0002.agent_report.json  RUN-2025-12-16-0003.agent_report.json  RUN-2025-12-16-0004.agent_report.json  RUN-2025-12-16-0005.agent_report.json  RUN-2025-12-16-0006.agent_report.json  RUN-2025-12-16-0007.agent_report.json  RUN-2025-12-17-0008.agent_report.json  RUN-2025-12-17-0009.agent_report.json
.ai/memory/adr/ADR-0001-repo-first-memory/: body.md  meta.json
.ai/memory/constraints/CONSTRAINT-0001-ai-memory/: body.md  meta.json
.ai/memory/runbooks/RUNBOOK-0001-codex-cli-workflow/: body.md  meta.json
.ai/memory/tasks/TASK-2025-12-16-0001/: body.md  meta.json
.ai/memory/tasks/TASK-2025-12-16-0002/: body.md  meta.json
.ai/memory/tasks/TASK-2025-12-16-0003/: body.md  meta.json
.ai/memory/tasks/TASK-2025-12-16-0004/: body.md  meta.json
.ai/memory/tasks/TASK-2025-12-16-0005/: body.md  meta.json
.ai/memory/tasks/TASK-2025-12-16-0006/: body.md  meta.json
.ai/memory/tasks/TASK-2025-12-16-0007/: body.md  meta.json
.ai/memory/tasks/TASK-2025-12-17-0008/: body.md  meta.json
.ai/memory/tasks/TASK-2025-12-17-0009/: body.md  meta.json
.ai/schemas/: agent_report.schema.json
.ai/tests/: test_memctl.py
.ai/tools/: memctl.py
.github/PULL_REQUEST_TEMPLATE/: ai.md
.github/workflows/: ai_context_pack.yml  ai_memory_validate.yml  ai_pr_gate.yml  build_windows.yml
docs/: DEVELOPMENT_SUMMARY.md  USAGE.md  USER_GUIDE.md  fps-basics.md  requirements.md
lab/: CMakeLists.txt  README.md  anti-cheat-bypass-analysis.md
lab/docs/: dual-fps-implementation-plan.md  fraps-analysis.md  fullscreen-solution-plan.md  global-hook-implementation.md  gpu-vs-display-fps.md  improvement-plan.md  kernel-level-solution.md  limitations-and-constraints.md  technical-summary.md  universal-solution.md
lab/src/: etw_monitor.cpp  etw_monitor.h  main.cpp  overlay_window.cpp  overlay_window.h
lab/src/global_hook/: CMakeLists.txt  build_all.ps1  cleanup.bat  fps_config.h  fps_hook.cpp  fps_monitor.cpp  清楚hookl方法.txt
lab/src/global_hook/v1.4/: fps_config.ini
lab/src/global_hook/v1.5/: README.md
lab/src/global_hook/v1.7/: README.md  TECHNICAL_SPEC.md  fps_config.ini  preview.html
scripts/: build.bat  create_icon.ps1  download_deps.ps1
src/: dllmain.cpp  fps_counter.cpp  fps_counter.h  hooks.cpp  hooks.h  logger.h  overlay.cpp  overlay.h
src/injector/: main.cpp
src/launcher/: main.cpp
src/test_app/: main.cpp
